# BreadBoardCPU

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
.cache/clangd/index/: Bitwise.h.55A6162782A08F7B.idx  advance.h.10941C7FCE144D20.idx  alu.h.22E41DE53D64E6A3.idx  alu.h.BC314587D796F5F9.idx  asm.h.519DE398DCBF7D2B.idx  basic.h.A632F6331915B194.idx  bitset.h.98786D3881FF31E3.idx  common.h.E1149EAC1A266F5D.idx  cpu.h.933BC2EE360073D5.idx  define_enum_x.h.9A77B5858BD96B82.idx  function_dynamic.h.10D5291D0B5A9A3C.idx  function_static.h.5061AEDC38510F76.idx  main.cpp.ED510B469340E584.idx  marg.h.D6021654BE0D8D64.idx  mcode.h.5F6E057ED0E46BB0.idx  mctrl.h.71A38E625512C67E.idx  opcode.h.C83C5D2AD053CD75.idx  regpair.h.EDC0D23A99F108AD.idx  regs.h.82C1A37C2E5AE684.idx  util.h.5C4BE1DD280EB974.idx
.devcontainer/: Dockerfile  devcontainer.json
cpu/: BreadBoardCPU.h  alu.h  asm.h  common.h  cpu.h  marg.h  mcode.h  mctrl.h  opcode.h  regpair.h  regs.h
include/: Bitwise.h  alu.h  bitset.h  util.h
include/asm/: advance.h  asm.h  basic.h  function.h  function_dynamic.h  function_static.h  operator.h  ops.h  statement.h  type.h  var.h
include/cpu/: alu.h  circuit.h  circuit2.h  common.h  components.h  cpu.h  define_enum_x.h  marg.h  mcode.h  mctrl.h  opcode.h  regpair.h  regs.h
include/lang/: define_members.h  function.h  lang.h  library.h  operator.h  statement.h  type.h  var.h
include/sim/: chips.h  circuits.h  component.h  port.h  sim.h  wire.h
test/: advance.cpp  asm_test_util.h  basic.cpp  function.cpp  function_dynamic.cpp  opcode.cpp  statement.cpp
(+12 files in other folders)
